--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "weather-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "restaurant",
+  "version": "1.0.0",
+  "description": "Restaurant page",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "push": "git subtree push --prefix dist origin gh-pages"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sobrands/restaurant.git"
+  },
+  "author": "Brandon Lim",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sobrands/restaurant/issues"
+  },
+  "homepage": "https://github.com/sobrands/restaurant#readme",
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.18.1",
-    "axios": "^1.6.7",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "date-fns": "^3.3.0"
   }
 }
